[package]
name = "rus-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.21"
syn = { version = "1.0.103", features = ["extra-traits"]}
proc-macro2 = "1.0.47"
